# ui

./: .clangd  .gitignore  .gitmodules  Application.qml  CMakeLists.txt  Cameras.qml  CamerasBuiltin.qml  Chat.qml  ChatView.qml  DJIControl.qml  Dashboard.qml  GrpcCallOptions.qml  InitialSetup.qml  LICENSE  LockState.qml  Main.qml  Makefile  Monitor.qml  Players.qml  Profiles.qml  README.md  Restreams.qml  Settings.qml  SwipeLockOverlay.qml  Timers.qml  VideoPlayerRTMP.qml  android.cpp  android.h  android_permissions.cpp  android_permissions.h  android_permissions_wifi.cpp  ble_characteristic.h  ble_remote_device.cpp  ble_remote_device.h  ble_service.h  channel_quality_info.cpp  channel_quality_info.h  cleanup-audit.md  cpp_extensions.h  diagnostics.proto  (+27 more)
.github/explanations/: summary.md
.github/workflows/: android-e2e.yml  e2e-tests.yml  headless-qml-tests.yml  unit-tests.yml
GStreamer/: CMakeLists.txt  RTMPVideo.qml  gstreamer.cpp  gstreamer.h  rtmp_gst_controller.cpp  rtmp_gst_controller.h
LibAV/: CMakeLists.txt
StreamingController/: CMakeLists.txt
StreamingController/LibAV/: CMakeLists.txt  encoder.h  encoder_rtmp.cpp  encoder_rtmp.h  worker_encoder.cpp  worker_encoder.h
StreamingSettingsController/: CMakeLists.txt  streaming_settings_controller.cpp  streaming_settings_controller.h
android/: AndroidManifest.xml  build.gradle
android/libs/arm64-v8a/: wrap.sh
android/scripts/: symbolize_stack_trace.sh
android/src/: MainActivity.java  SignalStrengthListener.java  VibratorWrapper.java  WiFi.java  WingOutBackgroundService.java  WingOutBroadcastReceiver.java
android/src/center/dx/wingout2/: MainActivity.java  SignalHelper.java  VibratorWrapper.java  WiFiHelper.java  WingOutDaemon.java
android/src/org/xaionaro/wingout2/: MainActivity.java  SignalHelper.java  VibratorWrapper.java  WiFiHelper.java  WingOutDaemon.java
cmd/wingoutd/: main.go
gst/: CMakeLists.txt  RtmpVideo.qml  rtmp_gst_controller.cpp  rtmp_gst_controller.h
import/: ffstream  streamctl
myscripts/: build_android_debug.sh
pkg/api/: server.go  server_test.go  service.go  service_avd.go  wingout.pb.go  wingout_grpc.pb.go
pkg/backend/: avd.go  avd_mock.go  dial.go  ffstream.go  ffstream_mock.go  ffstream_mock_test.go  remote_avd.go  remote_ffstream.go  remote_streamd.go  remote_streamd_test.go  streamd.go  streamd_mock.go  streamd_mock_test.go  types.go
pkg/wingoutd/: config.go  config_test.go  wingoutd.go  wingoutd_test.go
proto/: wingout.proto
protobuf/: diagnostics.proto
qml/: Main.qml  Theme.qml
qml/components/: GlassButton.qml  GlassCard.qml  GlassPanel.qml  MetricTile.qml  NavMenu.qml  SearchField.qml  StatusBadge.qml  SwipeLockOverlay.qml  VideoPlayerRTMP.qml
qml/dialogs/: ErrorDialog.qml  InitialSetup.qml
qml/pages/: AVDPage.qml  CamerasPage.qml  ChatPage.qml  DJIControlPage.qml  DashboardPage.qml  LogsPage.qml  MonitorPage.qml  PlayersPage.qml  ProfilesPage.qml  RestreamsPage.qml  SettingsPage.qml  StatusPage.qml
scripts/: build_android_debug.sh  build_desktop_debug.sh  copy_or_generate_font.sh  e2e_wingout_launch.sh  run_headless_tests.sh  run_local_emulator_and_tests.sh  smoke_run_wingout.sh
src/: djicontroller.cpp  djicontroller.h  main.cpp  platformcontroller.cpp  platformcontroller.h  streamingsettingscontroller.cpp  streamingsettingscontroller.h  wingoutcontroller.cpp  wingoutcontroller.h
tests/: CMakeLists.txt  check_qml_proto_wrappers.sh  mock_backend.h  mock_platform.cpp  mock_platform.h  tst_streaming_settings_controller_reconcile.cpp  tst_wingout.cpp  wingout_qml.qrc  wingout_test_qmldir
tests/e2e/: e2e_test.go  full_e2e_test.go  headless_e2e_test.go  helpers_test.go
tests/e2e/android/: adb.go  cameras_test.go  chat_test.go  dashboard_test.go  djicontrol_test.go  error_test.go  flow_test.go  helpers_test.go  lifecycle_test.go  lock_test.go  monitor_test.go  navigation_test.go  players_test.go  profiles_test.go  restreams_test.go  settings_test.go  setup_test.go  status_test.go  testmain_test.go  themes_screenshot_test.go
tests/e2e/desktop/: atspi.go  cameras_test.go  chat_test.go  dashboard_test.go  djicontrol_test.go  helpers_test.go  lifecycle_test.go  monitor_test.go  navigation_test.go  players_test.go  profiles_test.go  restreams_test.go  settings_test.go  setup_test.go  testmain_test.go
tests/qml/: tst_application_flow.qml  tst_cameras_builtin_activation_lifecycle.qml  tst_cameras_builtin_deactivate.qml  tst_cameras_builtin_grpc_integration.qml  tst_cameras_builtin_grpc_no_channel.qml  tst_cameras_builtin_outputurl_commit.qml  tst_cameras_builtin_scroll_target.qml  tst_cameras_page.qml  tst_chat_view.qml  tst_dashboard_checkboxes.qml  tst_dashboard_logic.qml  tst_dashboard_preview_bindings.qml  tst_dji_control.qml  tst_dji_control_rtmp_url_field.qml  tst_glass_components.qml  tst_grpc_resilience.qml  tst_initial_setup.qml  tst_main_default_preview_url.qml  tst_main_oncompleted_seed.qml  tst_main_reconciliation.qml  tst_metric_tile.qml  tst_monitor_page.qml  tst_navigation.qml  tst_no_mission_overfit_in_product_code.qml  tst_players_page.qml  tst_profiles_page.qml  tst_restreams_page.qml  tst_settings_page.qml  tst_swipe_lock.qml  tst_timers.qml  tst_video_player.qml
tools/font-generator/: correct_fsSelection.py  set_isFixedPitch.py
tools/font-generator/OpenType/: checksum.py  table.py
